--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<article class="card card--grey-blue">
 					<div class="card__header">
 						<div class="card__avatar">
-							<img class="card__avatar-image" src="images/image-jonathan.jpg">
+							<img class="card__avatar-image" src="images/image-jonathan.jpg" alt="avatar">
 						</div>
 						<div class="card__info">
 							<h1>Jonathan Walters</h1>
@@ -82,7 +82,7 @@
 				<article class="card">
 					<div class="card__header">
 						<div class="card__avatar">
-							<img class="card__avatar-image" src="images/image-jeanette.jpg">
+							<img class="card__avatar-image" src="images/image-jeanette.jpg" alt="avatar">
 						</div>
 						<div class="card__info">
 							<h1> Jeanette Harmon</h1>
@@ -107,7 +107,7 @@
 					<div class="card__header">
 						<div class="card__avatar">
 							<img class="card__avatar-image avatar-image--violet"
-								src="images/image-patrick.jpg">
+								src="images/image-patrick.jpg" alt="avatar">
 						</div>
 						<div class="card__info">
 							<h1> Patrick Abrams</h1>
@@ -137,7 +137,7 @@
 				<article class="card">
 					<div class="card__header">
 						<div class="card__avatar">
-							<img class="card__avatar-image" src="images/image-kira.jpg">
+							<img class="card__avatar-image" src="images/image-kira.jpg" alt="avatar">
 						</div>
 						<div class="card__info">
 							<h1> Kira Whittle</h1>
