--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<div class="card__header">
 						<div class="card__avatar">
 							<img class="card__avatar-image avatar-image--violet"
-								src="images/image-daniel.jpg">
+								src="images/image-daniel.jpg"  alt="avatar">
 						</div>
 						<div class="card__info">
 							<h1>Daniel Clifford</h1>
