--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							Engineer at a VR startup. ”
 						</p>
 					</div>
-				</article><!-- .card--violet -->
+				</article>
 
 				<article class="card card--grey-blue">
 					<div class="card__header">
@@ -77,7 +77,7 @@
 							myself. ”
 						</p>
 					</div>
-				</article><!-- .card--grey-blue -->
+				</article>
 
 				<article class="card">
 					<div class="card__header">
@@ -132,7 +132,7 @@
 							an incredible community of smart and amazing people. ”
 						</p>
 					</div>
-				</article><!-- .card--blackish-blue -->
+				</article>
 
 				<article class="card">
 					<div class="card__header">
